# flutter_rust_embedder

./: Cargo.toml  LICENSE  build.rs
examples/: simple.rs  wgpu_window.rs
src/: application.rs  composition.rs  flutter_embedder.rs  flutter_render_config_vk.rs  lib.rs  logging.rs  tracing_integration.rs  utils.rs  windowing.rs
