[package]
name = "flutter_rust_embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.7"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
wgpu = "24.0.1"
winit = "0.30.9"
tracing-perfetto = { git = "https://github.com/eladmaimoni/tracing-perfetto.git", branch = "main" }
chrono = "0.4.40"
libloading = "0.8.6"

[build-dependencies]
bindgen = "0.71.1"

# tracing perfetto straight from github
